publishing awesome pages 1587761393929

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
-body  {
-       margin:0;
-       display:flex;
-      }
+body  
+{
+    margin:0;
+    display:flex;
+}
+footer{
+width:0xp;
+height:0xp;
+}
